objects/MaintenanceLinkOrder__c.object
<CustomObject>
    <fields>
        <fullName>HontaiAmount__c</fullName>
        <label>HontaiAmount</label>
        <summarizedField>MaintenanceLinkOrderLine__c.pric__c</summarizedField>
        <summaryFilterItems>
            <field>MaintenanceLinkOrderLine__c.item__c</field>
            <operation>equals</operation>
            <value>CZZH007, CZZH016</value>
        </summaryFilterItems>
        <summaryForeignKey>MaintenanceLinkOrderLine__c.MaintenanceLinkOrder__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>LinkageStatus__c</fullName>
        <label>連携ステータス</label>
        <picklist>
            <picklistValues>
                <fullName>未連携</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>連携済</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>連携不要</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>MaintenanceContractManagement__c</fullName>
        <label>保守契約管理</label>
        <referenceTo>MaintenanceContractManagement__c</referenceTo>
        <relationshipLabel>MaintenanceLinkOrder</relationshipLabel>
        <relationshipName>MaintenanceLinkOrder</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>VersionSent__c</fullName>
        <label>VersionSent</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>atta__c</fullName>
        <description>ATT</description>
        <label>atta</label>
        <length>160</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>blng__c</fullName>
        <description>販売先担当者所属</description>
        <label>blng</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>bsno__c</fullName>
        <description>受注予定番号</description>
        <label>bsno</label>
        <length>9</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ccur__c</fullName>
        <description>オーダ通貨</description>
        <label>ccur</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cdis__c</fullName>
        <description>中止理由</description>
        <label>cdis</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>clyn__c</fullName>
        <description>取消</description>
        <label>削除</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>cmcd__c</fullName>
        <description>口銭支払先コード</description>
        <label>cmcd</label>
        <length>9</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cntr__c</fullName>
        <description>契約区分</description>
        <label>cntr</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cofc__c</fullName>
        <description>販売オフィス</description>
        <label>cofc</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cpcl__c</fullName>
        <description>系列</description>
        <label>cpcl</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cprj__c</fullName>
        <description>製番</description>
        <label>cprj</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>creg__c</fullName>
        <description>地域</description>
        <label>creg</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>crep__c</fullName>
        <description>営業担当者</description>
        <label>crep</label>
        <length>9</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ctps__c</fullName>
        <description>販売先担当者名</description>
        <label>ctps</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ddat__c</fullName>
        <description>計画納期</description>
        <label>ddat</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>dlbl__c</fullName>
        <description>納入先担当者所属</description>
        <label>dlbl</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>dlfx__c</fullName>
        <description>納入先FAX</description>
        <label>dlfx</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>dlpr__c</fullName>
        <description>納入先担当者名</description>
        <label>dlpr</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>dlps__c</fullName>
        <description>納入先担当者役職</description>
        <label>dlps</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>dltl__c</fullName>
        <description>納入先TEL</description>
        <label>dltl</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>falp__c</fullName>
        <description>販売先FAX</description>
        <label>falp</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>gndt__c</fullName>
        <description>取込日時</description>
        <label>gndt</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>hose__c</fullName>
        <description>保守契約終了日</description>
        <label>hose</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>hoss__c</fullName>
        <description>保守契約開始日</description>
        <label>hoss</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>hsyu__c</fullName>
        <description>保守種類</description>
        <label>hsyu</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ifdt__c</fullName>
        <description>連携日時</description>
        <label>ifdt</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ifst__c</fullName>
        <description>連携状況</description>
        <label>連携状況</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>keki__c</fullName>
        <description>契約金額</description>
        <label>keki</label>
        <precision>13</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>kkzy__c</fullName>
        <description>契約更新状況</description>
        <label>kkzy</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>kosy__c</fullName>
        <description>故障修理</description>
        <label>kosy</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>main__c</fullName>
        <description>本体号機</description>
        <label>main</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>memo__c</fullName>
        <description>受注メモ</description>
        <label>memo</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mess__c</fullName>
        <description>エラーメッセージ</description>
        <label>エラーメッセージ</label>
        <length>132</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mnno__c</fullName>
        <label>mnno</label>
        <length>14</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mtmr__c</fullName>
        <description>見積番号</description>
        <label>mtmr</label>
        <length>13</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mtno__c</fullName>
        <description>見積番号(枝番)</description>
        <label>mtno</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ntkn__c</fullName>
        <description>NET保守区分</description>
        <label>ntkn</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>odat__c</fullName>
        <description>オーダ日付</description>
        <label>odat</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>odkd__c</fullName>
        <description>オーダ種別</description>
        <label>odkd</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ofbp__c</fullName>
        <description>販売先取引先</description>
        <label>ofbp</label>
        <length>9</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>orno__c</fullName>
        <description>Baan販売オーダ番号</description>
        <label>orno</label>
        <length>9</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>osrp__c</fullName>
        <description>アシスタント</description>
        <label>osrp</label>
        <length>9</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>oth1__c</fullName>
        <description>その他１</description>
        <label>oth1</label>
        <length>160</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>oth2__c</fullName>
        <description>その他２</description>
        <label>oth2</label>
        <length>160</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pkcm__c</fullName>
        <description>支払口銭金額</description>
        <label>pkcm</label>
        <precision>13</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>post__c</fullName>
        <description>販売先担当者役職</description>
        <label>post</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>prdt__c</fullName>
        <description>搬入納期</description>
        <label>prdt</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>prkg__c</fullName>
        <description>商社取分金額</description>
        <label>prkg</label>
        <precision>13</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>prtc__c</fullName>
        <description>商社関与区分</description>
        <label>prtc</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rcid__c</fullName>
        <formula>casesafeid(Id)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>rcid</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rlsn__c</fullName>
        <description>関連オーダ番号</description>
        <label>rlsn</label>
        <length>9</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>scdt__c</fullName>
        <description>契約納期</description>
        <label>scdt</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>sdsc__c</fullName>
        <description>受注代表商品名</description>
        <label>sdsc</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sfno__c</fullName>
        <description>SFDC販売オーダ番号</description>
        <label>sfno</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>siko__c</fullName>
        <description>新規/更新</description>
        <label>siko</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sotp__c</fullName>
        <description>オーダタイプ</description>
        <label>sotp</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>stax__c</fullName>
        <description>受注総額</description>
        <label>stax</label>
        <precision>13</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>stbp__c</fullName>
        <description>出荷先取引先</description>
        <label>stbp</label>
        <length>9</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>stuk__c</fullName>
        <description>請求予定月</description>
        <label>stuk</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>svcm__c</fullName>
        <description>サービス金額</description>
        <label>svcm</label>
        <precision>13</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>sybu__c</fullName>
        <description>修理部品</description>
        <label>sybu</label>
        <length>160</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>telp__c</fullName>
        <description>販売先TEL</description>
        <label>telp</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tete__c</fullName>
        <description>定期点検</description>
        <label>tete</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>tok1__c</fullName>
        <description>特記事項１</description>
        <label>tok1</label>
        <length>160</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tok2__c</fullName>
        <description>特記事項２</description>
        <label>tok2</label>
        <length>160</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tydt__c</fullName>
        <description>契約中止日</description>
        <label>tydt</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ukai__c</fullName>
        <description>売上回数</description>
        <label>ukai</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <label>BaaN連携データ</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>すべて選択</label>
    </listViews>
    <listViews>
        <fullName>TODAY</fullName>
        <columns>OBJECT_ID</columns>
        <columns>mess__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LinkageStatus__c</columns>
        <columns>ifst__c</columns>
        <columns>MaintenanceContractManagement__c</columns>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>greaterOrEqual</operation>
            <value>N_DAYS_AGO:1</value>
        </filters>
        <label>本日作成</label>
        <language>ja</language>
    </listViews>
    <nameField>
        <displayFormat>MLO-{00000000}</displayFormat>
        <label>MaintenanceLinkOrder名</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>